--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "First Node project",
   "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "lite-server --baseDir=\"public\""
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/MariusCodeAcademy/type12-node-01-fs-npm-node#readme",
   "dependencies": {
     "casual": "^1.6.2"
+  },
+  "devDependencies": {
+    "lite-server": "^2.6.1"
   }
 }
